2002-04-19  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	fixed $PERL detection again

2002-04-18  Hippo

	* configure.in:
	added -Wno-implicit-int to -Wall in case of gcc

	* fvwm/colorset.c:
	* fvwm/fvwm.c:
	fixed ReadWriteColors on a PseudoColor display

2002-04-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (move_window_doit):
	set the is_icon_moved too flag if the icon was moved non-interactively

2002-04-16  Hippo

	* fvwm/*.[ch]:
	* NEWS:
	Moved FvwmTheme functionality into fvwm.
	Added new commands Colorset, ReadWriteColors, CleanupColorsets.

2002-04-17  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	fixed $PERL detection

	* fvwm/fvwm.1:
	* fvwm/ConfigFvwmDefaults:
	several fixes and spelling

2002-04-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/Bindings.c (CheckBinding):
	(MatchBinding):
	(GrabWindowKey):
	(GrabWindowButton):
	(MatchBindingExactly):
	patch by yeti@physics.muni.cz to help with a weird problem w/ czech
	keyboards

2002-04-12  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	configure now uses $PERL if set

	* **:
	all programs installed into ${bindir} have now fvwm- prefix;
	documentation updated

2002-04-11  Mikhael Goikhman  <migo@homemail.com>

	* **:
	renamed fvwm2 executable to fvwm, fvwm2 man page to fvwm;
	documentation updated

2002-04-11  Mikhael Goikhman  <migo@homemail.com>

	* NEWS:
	added 2.4.7 entries

2002-04-10  Dan Espen  <dane@mk.telcordia.com>

	* AUTHORS: New author.

	* NEWS: Edge Command.

2002-04-09  Uwe Pross  <uwe.pross@gmx.net>

	* fvwm/fvwm2.1:
	Added EdgeCommand paragraph.

	* fvwm/events.c (HandleEnterNotify):
	Added execution of Scr.PanFrame*.command if set

	* fvwm/fvwm.c (InitVariables):
	Added init strings for pan frame commands.

	* fvwm/virtual.c:
	* fvwm/virtual.h:
	(checkPanFrames):
	Avoid hiding of pan frames if pan frame command	is set.
	(CMD_EdgeCommand):
	Implementation of the buildin command EdgeCommand. First
	implementation of this function.
